k8s/quarkus-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: quarkus
  namespace: quarkus-demo

spec:
  replicas: 2

  strategy:
    type: RollingUpdate

    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
      
  selector:
    matchLabels:
      app: quarkus

  template:

    metadata:
      labels:
        app: quarkus

      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/q/metrics"
        prometheus.io/port: "8080"

    spec:

      containers:

        - name: quarkus

          image: serafan/quarkus-k8s-demo:1.0.0

          imagePullPolicy: Never

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"

            limits:
              cpu: "1000m"
              memory: "1Gi"
