k8s/quarkus-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: quarkus
  namespace: quarkus-demo

  labels:
    app: quarkus

spec:
  selector:
    app: quarkus

  ports:
    - name: http
      port: 80
      targetPort: 8080

  type: ClusterIP
